[workspace]
resolver = "2"
members = [
    "common",
    "2023/day01",
    "2023/day02",
    "2023/day03",
    "2023/day04",
    "2023/day05",
    "2023/day06",
    "2023/day07",
    "2023/day08",
    "2023/day09",
    "2023/day10",
    "2023/day11",
    "2023/day12",
    "2023/day13",
    "2023/day14",
    "2023/day15",
    "2023/day16",
    "2023/day17",
    "2023/day18",
    "2023/day19",
    "2023/day20",
    "2023/day21",
    "2023/day22",
    "2023/day23",
    "2023/day24",
    "2023/day25"
]
